recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:2: error: '<-' expected but '=' found.
	for(i=0 to sides by 1){
             ^PolygonFractal:9: error: illegal start of simple expression
}
^